fix collapse bug

--- a/less/page-blocks/navbar.less
+++ b/less/page-blocks/navbar.less
@@ -62,9 +62,6 @@ nav.navbar-default {
                     transition: all 0.2s ease;
                     color: @ventu-color-secundary;
                     display: block;
-                    height: 100%;
-                    font-family: 'ProximaNova';
-
 
                     // logged in buttons
                     &.ventu-nav-icon-button {
